--- a/_config.yml
+++ b/_config.yml
@@ -44,11 +44,11 @@ comments:
     theme                : # "github-light" (default), "github-dark"
     issue_term           : # "pathname" (default)
   giscus:
-    repo_id              : "R_kgDOI0v_1w"# Shown during giscus setup at https://giscus.app
-    category_name        : "Comments"# Full text name of the category
-    category_id          : "DIC_kwDOI0v_184Cc_B-"# Shown during giscus setup at https://giscus.app
-    discussion_term      : "pathname"# "pathname" (default), "url", "title", "og:title"
-    reactions_enabled    : '1'# '1' for enabled (default), '0' for disabled
+    repo_id              : "R_kgDOI0v_1w"    # Shown during giscus setup at https://giscus.app
+    category_name        : "Comments" # Full text name of the category
+    category_id          : "DIC_kwDOI0v_184Cc_Gf" # Shown during giscus setup at https://giscus.app
+    discussion_term      : "pathname" # "pathname" (default), "url", "title", "og:title"
+    reactions_enabled    : '1' # '1' for enabled (default), '0' for disabled
     theme                : "preferred_color_scheme"# "light" (default), "dark", "dark_dimmed", "transparent_dark", "preferred_color_scheme"
   staticman:
     branch               : # "master"
@@ -61,7 +61,7 @@ atom_feed:
   hide                   : # true, false (default)
 search                   : true # false (default)
 search_full_content      : # true, false (default)
-search_provider          : # lunr (default), algolia, google
+search_provider          : google # lunr (default), algolia, google
 lunr:
   search_within_pages    : # true, false (default)
 algolia:
@@ -287,7 +287,7 @@ defaults:
       layout: single
       author_profile: true
       read_time: true
-      comments: # true
+      comments: true
       share: true
       related: true
       show_date: true
