--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ locale                   : "ko-KR"
 title                    : "바래의 오류 저장공간"
 title_separator          : "｜"
 subtitle                 : "조금이라도 괜찮아"
-name                     : "송바래(ばれ)"
+name                     : "바래"
 description              : "해결하느냐 고생한(?) 오류들을 정리해요."
 url                      : "https://gihun3645.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
@@ -104,7 +104,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "송바래(ばれ)"
+  name             : "바래"
   avatar           : "/assets/avatar.png"
   bio              : "조금이라도 괜찮아"
   location         : "Korea"
